@@ -1,4 +1,4 @@
 DIST trollop-1.8.2.gem 15360 RMD160 60b550aa5641538e4ea8c17b242c2dcf7db1c8c4 SHA1 15a369dee28c597eeac654e900c650c7ec0c2830 SHA256 1e83d7656e45b7772920098d0d0b294260653861a89166508c38ff183a7f30fc
 EBUILD trollop-1.8.2.ebuild 358 RMD160 050e9e7802db9bd350bc4f8dfd2eefeb505ff173 SHA1 a2bfcb52eb5faf83d56240e3e6a212691d5238a8 SHA256 8415e62c536634b76b658830a6f231e5ffd2e3e9943df17ce1c990cd0952b54b
-MISC ChangeLog 405 RMD160 f5bdd044732957d22f06d72f7fbf60dbf40f9881 SHA1 b140a1d740d529cc61eb735d7ea35f4be9321f03 SHA256 05cbbde14b73c438a27ec0c300a72562c5d8d497b65149b888b81a4889270c7f
-MISC metadata.xml 623 RMD160 c53642d0b28c5ff7261ce20b39f72fdacc732379 SHA1 97e8550bfe25f24daf618151364ebf0629fd6ade SHA256 c112701c0409d7365c62748bf71ea48a0bf9614c2a28adc3fdad42c5f0074116
+MISC ChangeLog 495 RMD160 43854735b4de32a2c52b9aa52dc450d2e8be7ed8 SHA1 b41c08beeb242e9b6e4adf6cb0e68ee464f9fbcb SHA256 15982a32e819c7724ae8a09fbd8cd0ee9da3d316706910853252af591367548d
+MISC metadata.xml 527 RMD160 cc5af79fb90588ad484c923eff29e53a0006a5c1 SHA1 63742547b3fbd04c38a54f73f4682f4e111ffc8f SHA256 8561264b50dc1179edff28399503cfa17f230c75e64a08d202619b6dec05af14
