@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
+
   26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
   trollop-1.8.2.ebuild:
   Simplify variables, much of this is set by the ruby USE flag
